# ServerStatus

./: CMakeLists.txt  ServerStatus.sln  ServerStatus.vcxproj  ServerStatus.vcxproj.filters
ServerStatus/: FormatData.cpp  FormatData.hpp  ProcessData.cpp  ProcessData.hpp  main.cpp
ServerStatus.xcodeproj/: project.pbxproj
ServerStatus.xcodeproj/xcshareddata/xcschemes/: ServerStatus.xcscheme
ServerStatus.xcodeproj/xcuserdata/charles.xcuserdatad/xcschemes/: xcschememanagement.plist
ServerStatus/ClientList/: ClientList.cpp  ClientList.hpp  ClientName.cpp  ClientName.hpp
ServerStatus/ConnectionLog/: ConnectionEntry.cpp  ConnectionEntry.hpp  ConnectionLog.cpp  ConnectionLog.hpp
ServerStatus/ErrorLog/: ErrorEntry.cpp  ErrorEntry.hpp  ErrorLog.cpp  ErrorLog.hpp
ServerStatus/ServerLog/: ServerEntry.cpp  ServerEntry.hpp  ServerLog.cpp  ServerLog.hpp
utility/: BaseConfiguration.cpp  BaseConfiguration.hpp
